# Linkedrite

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfileold  FIX_CSRF_ERROR.md  FIX_DATABASE_LOOP_NOW.md  FIX_DEPLOYMENT_NOW.md  Readme.md  SAAS_README.md  VERIFY_NOW.md  docker-compose.yml  docker-entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test-deployment.ps1  test-deployment.sh
.github/workflows/: README.md  deploy-saas-simple.yml  deploy-saas.yml  deploy.yml  dockerDeploy.yml  release.yml
ChromeExtension/: ChromeExtension.crx  content.js  manifest.json  styles.css
LinkedInAi/: asgi.py  settings.py  urls.py  wsgi.py
LinkedinRewrite/: settings.py  wsgi.py
Linkedrite/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
accounts/management/: __init__.py
accounts/migrations/: 0001_initial.py
docs/: Readme.md
examples/: cache_usage.py
linkedin/: admin.py  apps.py  models.py  services.py  urls.py  views.py
linkedin/migrations/: 0001_initial.py
posts/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
posts/migrations/: 0001_initial.py
rewrite/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
rewrite/migrations/: 0001_initial.py
scripts/: fix-csrf-error.sh  fix-database-loop.sh  fix-missing-dependencies.sh  fix-port-8000.sh  setup_dev_admin.py  verify-deployment.sh
static/css/: input.css
subscriptions/: admin.py  models.py
(+29 files in other folders)
