[project]
name = "linkedrite"
version = "0.1.0"
description = "Add your description here"
readme = "docs/readme.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "openai>=1.76.2",
    "python-dotenv>=1.1.0",
    "whitenoise>=6.9.0",
]
